# PyRagix

./: .gitattributes  .gitignore  AGENTS.md  ProcessingConfig.py  README.md  __version__.py  claude.md  config.py  dev.sh  ingest.bat  ingest.sh  ingest_folder.bat  ingest_folder.py  menu.py  ocr_processor.py  pyproject.toml  pyrightconfig.json  query.bat  query.sh  query_rag.py  requirements.in  requirements.txt  settings.example.toml  start_web.bat  start_web.sh  todo-python.md  types_models.py  visualization_utils.py  web_server.py
.github/workflows/: ci.yml  publish.yml
classes/: OCRProcessor.py  ProcessingConfig.py
ingestion/: __init__.py  cli.py  environment.py  faiss_manager.py  file_filters.py  file_scanner.py  metadata_store.py  models.py  pipeline.py  progress.py  stale_cleaner.py  text_processing.py
rag/: __init__.py  configuration.py  embeddings.py  llm.py  loader.py  retrieval.py
tests/: test_config.py  test_environment.py  test_faiss_manager.py  test_file_filters.py  test_file_scanner.py  test_text_processing.py
typings/faiss/: __init__.pyi
typings/fitz/: __init__.pyi
typings/paddleocr/: __init__.pyi
typings/pytest/: __init__.py  __init__.pyi
typings/rank_bm25/: __init__.pyi
typings/sklearn/: __init__.pyi  manifold.pyi
typings/sqlite_utils/: __init__.pyi
typings/umap/: __init__.pyi
utils/: __init__.py  bm25_index.py  faiss_importer.py  faiss_types.py  ollama_status.py  query_expander.py  reranker.py  spinner.py
web/: __init__.py  dev.bat  index.html  models.py  script.ts  server.py  style.css  tsconfig.json  visualization_utils.py
